Bug 232951. Make scrolling of scrolling-views-without-widgets work properly even when there are child widgets. r+sr=dbaron